swipe vertical scroll fix on mobile

--- a/rebus/css/styles.css
+++ b/rebus/css/styles.css
@@ -2036,7 +2036,7 @@ p {
   order: 1;
 }
 .portfolio-box.inner.info-left .image-back:before {
-  right: 0px;
+  right: -2px;
 }
 .portfolio-box.inner.info-left .content-box {
   order: 2;
@@ -2054,7 +2054,7 @@ p {
 .portfolio-box.inner.info-right .image-back:before {
   top: -1px;
   bottom: -1px;
-  left: 0px;
+  left: -2px;
   -moz-transform: rotate(180deg);
   -ms-transform: rotate(180deg);
   -webkit-transform: rotate(180deg);
